--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Priend</string>
+
+    <string name="login_entry_text_email">Email</string>
+    <string name="login_entry_text_next">Next</string>
+
+    <string name="login_password_text_password">Password</string>
+    <string name="login_password_text_login">Login</string>
+
+    <string name="register_text_password">Password</string>
+    <string name="register_text_confirm_password">Confirm password</string>
+    <string name="register_text_name">Name</string>
+    <string name="register_text_register">Register</string>
 </resources>
