--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="login_entry_text_next">Next</string>
     <string name="login_entry_message_require_email">You have to enter an email.</string>
     <string name="login_entry_message_not_verified">You have to verify your email first.</string>
-    <string name="login_entry_message_server_error">There is an error occurred on the server. Please try again.</string>
+    <string name="login_entry_message_server_error">There is an error occurred on the server.&#10;Please try again.</string>
 
     <string name="login_password_text_password">Password</string>
     <string name="login_password_text_login">Login</string>
@@ -14,9 +14,9 @@
     <string name="login_password_password_wrong">Password not matches.</string>
     <string name="login_password_forgot_password">Did you forget your password?</string>
     <string name="login_password_unknown_email">This account has been deleted or never existed.</string>
-    <string name="login_password_server_error">Failed to login due to a server error. Please try again.</string>
+    <string name="login_password_server_error">Failed to login due to a server error.&#10;Please try again.</string>
     <string name="login_password_reset_ok">Priend sent a password reset link. Click the link within 1 week or you\'ll need to request a new one.</string>
-    <string name="login_password_reset_server_error">Failed to create a link due to a server error. Please try again.</string>
+    <string name="login_password_reset_server_error">Failed to create a link due to a server error.&#10;Please try again.</string>
 
     <string name="register_text_password">Password</string>
     <string name="register_text_confirm_password">Confirm password</string>
@@ -30,6 +30,6 @@
     <string name="register_message_password_not_matches">Password not matches</string>
     <string name="register_message_name_required">You must enter your name.</string>
     <string name="register_message_welcome">Welcome! Please verify your email to login.</string>
-    <string name="register_message_server_error">Failed to register due to a server error. Please try again.</string>
+    <string name="register_message_server_error">Failed to register due to a server error.&#10;Please try again.</string>
     <string name="register_message_unexpected_error">Failed to register due to an unexpected error.</string>
 </resources>
